--- a/frontend/src/app/ventas/sell/sell-variantselection.component.html
+++ b/frontend/src/app/ventas/sell/sell-variantselection.component.html
@@ -10,12 +10,14 @@
         <h6 class="m-0">{{variant.nombre}}</h6>
         <h6 class="m-0">S/. {{variant.precioCompra}}</h6>
       </mat-card>
+      <span class="header-label">20 de Stock en 1/2 SACO</span>
     </div>
     <div fxFlex.gt-lg="25" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxFlex="100" (click)="getResult(false, null)">
       <mat-card class="oh" style="cursor: pointer; border: 1px solid #bec3c8; color: black; text-align: center;">
         <h6 class="m-0">{{data.entity.unidadDeMedida}}</h6>
         <h6 class="m-0">S/. {{data.entity.precioVenta}}</h6>
       </mat-card>
+      <span class="header-label">400 de Stock en {{data.entity.unidadDeMedida}}</span>
     </div>
   </div>
 </div>
