--- a/frontend/src/app/ventas/sell/sell-variantselection.component.scss
+++ b/frontend/src/app/ventas/sell/sell-variantselection.component.scss
@@ -8,6 +8,11 @@
     cursor: pointer;
 }
 
+.header-label{
+  margin-left: 30px;
+  font-size: 15px;
+}
+
 .oh:hover,
 .oh:focus {
   box-shadow: inset 0 0 0 2em var(--hover);
