--- a/src/main/webapp/app/entities/tipo-de-documento-de-venta/tipo-de-documento-de-venta-detail.component.html
+++ b/src/main/webapp/app/entities/tipo-de-documento-de-venta/tipo-de-documento-de-venta-detail.component.html
@@ -9,6 +9,14 @@
                 <dd>
                     <span>{{tipoDeDocumentoDeVenta.nombre}}</span>
                 </dd>
+                <dt><span>Serie</span></dt>
+                <dd>
+                    <span>{{tipoDeDocumentoDeVenta.serie}}</span>
+                </dd>
+                <dt><span>Formato</span></dt>
+                <dd>
+                    <span>{{tipoDeDocumentoDeVenta.formato}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
