--- a/src/main/webapp/app/entities/tipo-de-documento/tipo-de-documento-detail.component.html
+++ b/src/main/webapp/app/entities/tipo-de-documento/tipo-de-documento-detail.component.html
@@ -9,6 +9,10 @@
                 <dd>
                     <span>{{tipoDeDocumento.nombre}}</span>
                 </dd>
+                <dt><span>Cantidad Digitos</span></dt>
+                <dd>
+                    <span>{{tipoDeDocumento.cantidadDigitos}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
