--- a/src/main/webapp/app/entities/tipo-de-documento-de-venta/tipo-de-documento-de-venta-update.component.html
+++ b/src/main/webapp/app/entities/tipo-de-documento-de-venta/tipo-de-documento-de-venta-update.component.html
@@ -24,6 +24,28 @@
                         </small>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_serie">Serie</label>
+                    <input type="text" class="form-control" name="serie" id="field_serie"
+                        [(ngModel)]="tipoDeDocumentoDeVenta.serie" maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.serie?.dirty && editForm.controls.serie?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.serie?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_formato">Formato</label>
+                    <input type="text" class="form-control" name="formato" id="field_formato"
+                        [(ngModel)]="tipoDeDocumentoDeVenta.formato" maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.formato?.dirty && editForm.controls.formato?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.formato?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
+                </div>
 
             </div>
             <div>
