--- a/src/main/webapp/app/entities/tipo-de-documento/tipo-de-documento-update.component.html
+++ b/src/main/webapp/app/entities/tipo-de-documento/tipo-de-documento-update.component.html
@@ -24,6 +24,11 @@
                         </small>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_cantidadDigitos">Cantidad Digitos</label>
+                    <input type="number" class="form-control" name="cantidadDigitos" id="field_cantidadDigitos"
+                        [(ngModel)]="tipoDeDocumento.cantidadDigitos" />
+                </div>
 
             </div>
             <div>
