--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -42,7 +42,7 @@
                  [src]="product.imagen ? 'data:' + product.imagenContentType + ';base64,' + product.imagen : 'assets/images/big/no_product1.png'"
                  alt="Photo of a Shiba Inu">
             <!--<h6 class="m-0">stock: {{product.stock}}</h6>-->
-            <h6 class="m-0">{{product.stock}}</h6>
+            <h6 class="m-0">{{product.stock - getStockConsumFromProduct(product)}}</h6>
             <small>{{product.nombre}}</small>
           </mat-card>
         </div>
