--- a/frontend/src/app/ventas/sell/sell-extra-info.component.html
+++ b/frontend/src/app/ventas/sell/sell-extra-info.component.html
@@ -68,19 +68,19 @@
     <!-- column -->
     <div fxFlex.gt-sm="35" fxFlex="100" class="p-10">
       <mat-form-field>
-        <input matInput placeholder="Cliente / Razón Social" name="Cliente / Razón Social" type="text" maxlength="150" [(ngModel)]="data.client.nombre" disabled>
+        <input matInput placeholder="Cliente / Razón Social" name="Cliente / Razón Social" type="text" maxlength="150" [value]="data.client.id === undefined ? 'Cliente' : data.client.nombre" disabled>
       </mat-form-field>
     </div>
 
     <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
       <mat-form-field>
-        <input matInput placeholder="Dni o Ruc" name="Dni o Ruc" type="text" maxlength="11" [(ngModel)]="amortization.codigoDocumento" disabled>
+        <input matInput placeholder="Dni o Ruc" name="Dni o Ruc" type="text" maxlength="11" [value]="data.client.id === undefined ? '' : amortization.codigoDocumento" disabled>
       </mat-form-field>
     </div>
 
     <div fxFlex.gt-sm="40" fxFlex="100" class="p-10">
       <mat-form-field>
-        <input matInput placeholder="Dirección" name="Dirección" type="text" maxlength="150" [(ngModel)]="data.client.direccion" disabled>
+        <input matInput placeholder="Dirección" name="Dirección" type="text" maxlength="150" [value]="data.client.id === undefined ? '' : data.client.direccion" disabled>
       </mat-form-field>
     </div>
 
