--- a/frontend/src/app/pages2/invoice/invoice2.component.html
+++ b/frontend/src/app/pages2/invoice/invoice2.component.html
@@ -1,87 +1,163 @@
 <mat-card style="max-width: 695px;" *ngIf="venta && cliente">
   <mat-card-content>
-    <div class="mb-1">
-      <h1 class="mt-0" (click)="print()">
-        <strong>PRO ECONOMICA S.A.C.</strong>
-      </h1>
-      <div fxLayout="column">
-        <span>CAL. ALFONZO UGARTE NRO. 127 - LORETO BELEN</span>
-        <span>949451724</span>
-        <span>RUC: 20603441223</span>
-        <span>{{amortizationSelected.tipoDeDocumentoDeVentaNombre}}</span>
-        <span>{{amortizationSelected.codigo}}</span>
+
+    <div style="margin-bottom: 20px;" fxLayout="row wrap">
+      <div style="border-right: solid; text-align: center;" fxFlex.gt-xs="20" fxFlex="100">
+        <span>LOGO</span>
+      </div>
+
+      <div style="border:none; line-height: initial;" fxFlex.gt-xs="25" fxFlex="100">
+        <table class="table">
+          <thead>
+          <tr>
+            <th scope="col">PRO ECONOMICA S.A.C</th>
+            <!--<td>{{getFormatedDate()}}</td>-->
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">CAL. ALFONZO UGARTE NRO. 127 LORETO BELEN</th>
+            <!--<td>{{venta.tipoDePagoNombre}}</td>-->
+          </tr>
+          <tr>
+            <th scope="row">949451724</th>
+            <!--<td>-</td>-->
+          </tr>
+          <tr>
+            <th scope="row">ever@facturate.pe</th>
+            <!--<td>-</td>-->
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div
+        style="height:100%; position: relative; right: -67px; border-radius: 10px; border: none; text-transform: uppercase; line-height: 30px"
+        fxFlex.gt-xs="45" fxFlex="100">
+        <table class="table-header-fact">
+          <thead>
+          <tr>
+            <th scope="col" style="text-align: center; font-size: large">R.U.C. N° 20603441223</th>
+            <!--<td>{{venta.clienteNombre}}</td>-->
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row"
+                style="text-align: center; font-size: large">{{amortizationSelected.tipoDeDocumentoDeVentaNombre}}</th>
+            <!--<td>{{cliente.direccion}}</td>-->
+          </tr>
+          <tr>
+            <th scope="row" style="text-align: center; font-size: large">N° {{amortizationSelected.codigo}}</th>
+            <!--<td>{{amortizationSelected.codigoDocumento}}</td>-->
+          </tr>
+          </tbody>
+        </table>
       </div>
     </div>
 
     <div fxLayout="row wrap">
-      <div fxFlex.gt-xs="50" fxFlex="100">
-        <h4 class="font-bold"></h4>
-        <div fxLayout="column">
-          <span>Fecha: {{getFormatedDate()}}</span>
-          <span>Nombre o Razón Social</span>
-          <span>{{venta.clienteNombre}}</span>
-          <span>Dirección</span>
-          <span>{{cliente.direccion}}</span>
-        </div>
+      <div style="border-style: solid; " fxFlex.gt-xs="62" fxFlex="100">
+        <table class="table">
+          <thead>
+          <tr>
+            <th scope="col">Razón Social:   {{venta.clienteNombre}}</th>
+            <!--<td>{{venta.clienteNombre}}</td>-->
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">Dirección:   {{cliente.direccion}}</th>
+            <!--<td>{{cliente.direccion}}</td>-->
+          </tr>
+          <tr>
+            <th scope="row">RUC/DNI:   {{amortizationSelected.codigoDocumento}}</th>
+            <!--<td>{{amortizationSelected.codigoDocumento}}</td>-->
+          </tr>
+          <tr>
+            <th scope="row">Email:   {{cliente.correo}}</th>
+            <!--<td>{{cliente.correo}}</td>-->
+          </tr>
+          </tbody>
+        </table>
       </div>
-      <div fxFlex.gt-xs="50" fxFlex="100" class="text-right">
-        <h4 class="font-bold"></h4>
-        <div fxLayout="column">
-          <span></span>
-          <span>DNI/RUC</span>
-          <span>{{amortizationSelected.codigoDocumento}}</span>
-          <span></span>
-          <span></span>
-        </div>
+
+
+      <div style="border-style: solid; position: relative; right: -20px;" fxFlex.gt-xs="35" fxFlex="100">
+        <table class="table">
+          <thead>
+          <tr>
+            <th scope="col">Fecha de emision:</th>
+            <th>{{getFormatedDate()}}</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">Condición de pago:</th>
+            <th>{{venta.tipoDePagoNombre}}</th>
+          </tr>
+          <tr>
+            <th scope="row">Guia Remisión:</th>
+            <th>-</th>
+          </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </mat-card-content>
-
   <mat-card-content class="table-rasponsive">
-    <ngx-datatable class="material" [rows]="venta.productoDetalles" [columnMode]="'flex'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'">
-      <ngx-datatable-column name="Descripción" [flexGrow]="4">
+    <ngx-datatable class="material" [rows]="venta.productoDetalles" [columnMode]="'flex'" [headerHeight]="50"
+                   [footerHeight]="0" [rowHeight]="'auto'">
+      <ngx-datatable-column style="font-weight: bold;" name="Descripción" [flexGrow]="4">
         <ng-template ngx-datatable-cell-template let-row="row">
-          <strong>{{row.productoLabel}}</strong>
+          <span>{{row.productoLabel}}</span>
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="P.U." [flexGrow]="1">
+      <ngx-datatable-column style="font-weight: bold;" name="P.U." [flexGrow]="1">
         <ng-template ngx-datatable-cell-template let-row="row">
-          <strong>{{row.precioVenta}}</strong>
+          <span>{{row.precioVenta}}</span>
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="Cant." [flexGrow]="1">
+      <ngx-datatable-column style="font-weight: bold;" name="Cant." [flexGrow]="1">
         <ng-template ngx-datatable-cell-template let-row="row">
-          <strong>{{row.cantidad}}</strong>
+          <span>{{row.cantidad}}</span>
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="Total" [flexGrow]="1">
+      <ngx-datatable-column style="font-weight: bold;" name="Total" [flexGrow]="1">
         <ng-template ngx-datatable-cell-template let-row="row">
-          <strong>{{parseFloatCustom(row.precioVenta * row.cantidad)}}</strong>
+          <span>{{parseFloatCustom(row.precioVenta * row.cantidad)}}</span>
         </ng-template>
       </ngx-datatable-column>
     </ngx-datatable>
   </mat-card-content>
 
+  <!--Aca hacia abajo la actual-->
   <mat-card-content>
     <div fxLayout="row wrap">
       <div fxFlex.gt-xs="50" fxFlex="100">
-        <div fxLayout="column">
-          <span>ITEMS: {{venta.productoDetalles.length}}</span>
-          <span>FORMA PAGO: {{venta.tipoDePagoNombre.toUpperCase()}}</span>
-        </div>
       </div>
       <div fxFlex.gt-xs="50" fxFlex="100" class="text-right">
         <div class="d-flex align-items-center">
 
-          <div class="text-right ml-auto">
-            <h6 class="text-uppercase text-md ma-0 text-bold">Subtotal :</h6>
-            <h6 class="text-uppercase text-md ma-0 text-bold">Tax ({{venta.impuesto}}%) :</h6>
-            <h6 class="text-uppercase text-sm ma-0 text-bold">Total :</h6>
-          </div>
-          <div class="m-l-10">
-            <h4 class="font-medium">{{parseFloatCustom(venta.subTotal)}}</h4>
-            <h4 class="font-medium">{{parseFloatCustom((venta.subTotal * venta.impuesto) / 100)}}</h4>
-            <h4 class="font-medium">{{parseFloatCustom(venta.montoTotal)}}</h4>
+          <div style="border-style: solid; position: relative; right: -20px; margin-top: 170px;" fxFlex.gt-xs="95" fxFlex="100">
+            <table class="table">
+              <thead>
+              <tr>
+                <th scope="col">Subtotal</th>
+                <th>S/ {{parseFloatCustom(venta.subTotal)}}</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <th scope="row">Tax</th>
+                <th>S/ {{parseFloatCustom((venta.subTotal * venta.impuesto) / 100)}}</th>
+              </tr>
+              <tr>
+                <th scope="row">Total</th>
+                <th>S/ {{parseFloatCustom(venta.montoTotal)}}</th>
+              </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
@@ -89,3 +165,4 @@
   </mat-card-content>
 
 </mat-card>
+
