--- a/frontend/src/app/layouts/full/full.component.html
+++ b/frontend/src/app/layouts/full/full.component.html
@@ -10,7 +10,7 @@
         <!-- Logo - style you can find in header.scss -->
         <!-- ============================================================== -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand">
                 <!-- Logo icon -->
                 <b>
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
