--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -1,19 +1,6 @@
 <div fxLayout="row wrap">
   <div fxFlex.gt-lg="100" fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
-    <!--<div style="display: flex;">-->
-    <!--<div fxFlex.gt-xs="50" fxFlex="25" class="p-10" style="cursor: pointer">-->
-    <!--<a [routerLink]="['/ventas/sell/list']"> <mat-icon>arrow_back</mat-icon>-->
-    <!--<span class="goBackTag">Todas las ventas</span> </a>-->
-    <!--</div>-->
 
-
-    <!--&lt;!&ndash;<div fxFlex.gt-xs="50" fxFlex="75" class="p-10 text-right">-->
-    <!--<div class="button-row">-->
-    <!--<button mat-raised-button style="background-color: #60c71f; color: white;" [disabled]="!form.valid" (click)="save()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Vender&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>-->
-    <!--<button mat-raised-button (click)="previousState()">Cancelar</button>-->
-    <!--</div>-->
-    <!--</div>&ndash;&gt;-->
-    <!--</div>-->
   </div>
 </div>
 
@@ -43,7 +30,9 @@
                  alt="Photo of a Shiba Inu">
             <!--<h6 class="m-0">stock: {{product.stock}}</h6>-->
             <h6 class="m-0">{{product.stock}}</h6>
-            <small>{{product.nombre}}</small>
+            <!--<div class="dm-1" style="{position: relative; top: -13px; background-color: white; cursor: pointer}">-->
+              <h6 class= "lbl">{{product.nombre}}</h6>
+            <!--</div>-->
           </mat-card>
         </div>
       </div>
