--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -30,9 +30,9 @@
                  alt="Photo of a Shiba Inu">
             <!--<h6 class="m-0">stock: {{product.stock}}</h6>-->
             <h6 class="m-0">{{product.stock}}</h6>
-            <!--<div class="dm-1" style="{position: relative; top: -13px; background-color: white; cursor: pointer}">-->
+            <div class="dm-1">
               <h6 class= "lbl">{{product.nombre}}</h6>
-            <!--</div>-->
+            </div>
           </mat-card>
         </div>
       </div>
